# system-theme

./: Cargo.toml  LICENSE-MIT  README.md
examples/: async.rs  iced.rs  simple.rs
src/: error.rs  lib.rs
src/integration/: iced.rs  mod.rs
src/platform/: fallback.rs  macos.rs  mod.rs  windows.rs  xdg.rs
src/theme/: mod.rs  palette.rs
