[package]
name = "system-theme"
description = "A cross-platform library for retrieving system theme information."
version = "0.2.0"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
repository = "https://github.com/danielstuart14/system-theme"
documentation = "https://docs.rs/system-theme"
keywords = ["contrast", "dark", "mode", "accent", "color"]
categories = ["gui", "os"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
iced = { version = "0.14", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement", "Foundation_Metadata"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
zbus = "5.13.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "NSAccessibility", "NSAppearance", "NSApplication", "NSColor", "NSColorSpace", "NSResponder", "NSWindow", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray"] }

[features]
default = []
iced = ["dep:iced"]

[[example]]
name = "iced"
path = "examples/iced.rs"
required-features = ["iced"]

[[example]]
name = "simple"
path = "examples/simple.rs"
